fixing vertical alignment for landing page

--- a/style.css
+++ b/style.css
@@ -9,13 +9,16 @@
 }
 body {
     background: black;
-    color: #fff; /*maybe change this?*/
-    padding-top: 60px;
+    color: #fff; 
 }
 #header {
     background: #3F3F3F;
     width: 100%;
     height: 100vh;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 .logo {
     border-radius: 70%;
@@ -81,7 +84,6 @@ nav ul li a:hover::after{
 }
 
 .header-text h4{
-    padding-top: 250px;
     padding-left: 4px;
     font-size: 30px;
     letter-spacing: 1px;
